# pyremote

./: README.md
.github/workflows/: deploy.yaml
api/: docker-compose.yml  insecure.json  pyproject.toml  requirements.txt  simple_example.json
api/celery_app/: Dockerfile  main.py  tasks.py
api/celery_worker/: Dockerfile  cache_requirements.txt  main.py  tasks.py
api/fastapi_app/: Dockerfile  main.py
api/k8s/: celery-workers-deployment.yaml  celery-workers-hpa.yaml  celery-workers-pdb.yaml  celery-workers.yaml  cluster-issuer.yaml  fastapi-ingress.yaml  fastapi.yaml  namespace.yaml  redis.yaml
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  packages.tsx  page.tsx
